# algo-trade-bot

./: pyproject.toml
app/: 02 - Symbols.py
