[tool.poetry]
name = "algo-trade-bot"
version = "0.1.0"
description = ""
authors = ["Alexander Sidorov <sidai@bk.ru>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.12"
backtrader2 = "^1.9.76.123"
numpy = "^2.2.4"
scikit-learn = "^1.6.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
